tests/__new__/__snapshots__/api-expect-skip-fail-stderr.snap.txt
Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  2 | 
  3 | expect.skip.fail<string>().type.toBeString();
> 4 | expect.fail<string>().type.toBeString();
    | ^
  5 | 
  6 | describe("is describe?", () => {
  7 |   test("is string?", () => {

      at ./__typetests__/expect-skip-fail.tst.ts:4:1

Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

   7 |   test("is string?", () => {
   8 |     expect.skip.fail<string>().type.toBeString();
>  9 |     expect.fail<string>().type.toBeString();
     |     ^
  10 |   });
  11 | });
  12 | 

       at ./__typetests__/expect-skip-fail.tst.ts:9:5

Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  13 | test("is number?", () => {
  14 |   expect.skip.fail<number>().type.toBeNumber();
> 15 |   expect.fail<number>().type.toBeNumber();
     |   ^
  16 | });
  17 | 

       at ./__typetests__/expect-skip-fail.tst.ts:15:3

